[package]
name = "proglog"
version = "0.1.0"
edition = "2021"

[dependencies]
"actix-web" = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.5"
tempfile = "3.13.0"
memmap2 = "0.9.5"
prost = "0.13.3"
prost-build = "0.13.3"

[build-dependencies]
prost-build = "0.13.3"